feat: refactor sql in repositories and add unit test for template sample data